# graduate_work_nlp_in_ehr

./: .gitignore  README.md  VKR.ipynb  main.py  pyproject.toml  req_for_parser.txt  requirements.txt
data/: complaints.json  diseases_сustom.txt  medicaments.txt
extraction/: extraction_anamnesis.py  extraction_complaint.py  extraction_diagnosis.py
parser/: files_to_dataset.py  parse_epicrise.py
rules/: column_anamnesis.py  column_complaints.py  column_diagnosis.py  consts.py
utils/: preprocessing.py  utils.py
